# dsv-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
docs/: adr.md  anti-bot-puzzle.md  docker-packaging.md  dsv-tracking-api.md  installation.md
dsv_tracking/: browser_client.py  models.py  server.py
scripts/: try_tracking.py
test/: fetch_shipments.py  reference_numbers.txt  test_browser_client_recovery.py  test_docker_image.py  test_mcp_server.py  test_models.py  test_server_schema.py  test_tracking_client.py
