[project]
name = "dsv-tracking-mcp"
version = "0.1.0"
description = "MCP server for DSV/DB Schenker public shipment tracking"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.45",
    "mcp>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dsv_tracking"]
