[project]
name = "dsv-tracking-mcp"
version = "0.1.0"
description = "MCP server for DSV/DB Schenker public shipment tracking"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.45",
    "mcp>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: hits the real DSV site through a real browser (slow, paced)",
    "docker: runs against a built Docker image (slow, requires a local image)",
]
addopts = "-m 'not integration and not docker'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dsv_tracking"]
