[project]
name = "dsv-tracking-mcp"
version = "0.1.0"
description = "MCP server for DSV/DB Schenker public shipment tracking"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.45",
    "mcp>=1.2.0",
    "pydantic>=2.0",
]

[project.scripts]
dsv-tracking-mcp = "dsv_tracking.server:main"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: hits the real DSV site through a real browser (slow, paced)",
    "docker: runs against a built Docker image (slow, requires a local image)",
]
addopts = "-m 'not integration and not docker'"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dsv_tracking"]
